Fix navigation bar not showing on mobile devices

--- a/src/components/Layout/NavigationBar/navBar.scss
+++ b/src/components/Layout/NavigationBar/navBar.scss
@@ -1,91 +1,88 @@
-@import '../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
 
 .innerbar {
-    max-width: 1280px;
-    display: flex; 
-    justify-content: flex-start;
-    margin: 0 auto;
-    img {
-        height: 40px;
-    }
+  max-width: 1280px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0 auto;
+  img {
+    height: 40px;
+  }
 }
 
 .navbar {
-    display: block; 
-    justify-content: flex-start;
-    margin: 0 auto;
-    background-color: $brand-dark;
-    padding: 1rem 2rem;
+  display: block;
+  justify-content: flex-start;
+  margin: 0 auto;
+  background-color: $brand-dark;
+  padding: 1rem 2rem;
 
-    @media print {
-        display: none;
-    }
+  @media print {
+    display: none;
+  }
 }
 
 .nav-item {
-    font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 
+  a {
+    font-family: "Montserrat";
+    color: $grey-blue;
+    font-size: 1.15rem;
+    padding: 0 0 0 3.5rem !important;
+    font-weight: 500;
+
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+  &.active {
     a {
-        font-family: "Montserrat";
-        color: $grey-blue;
-        font-size: 1.15rem;
-        padding: 0 0 0 3.5rem !important;
-        font-weight: 500;
-
-        &:hover {
-            color: #fff;
-            text-decoration: none;
-        }
+      color: #fff;
+      pointer-events: none;
     }
-    &.active {
-        a {
-            color: #fff;
-            pointer-events: none;
-        }
-    }
+  }
 }
 
 .navbar-toggler {
-    display: none;
+  display: none;
 }
 
-
-
 @media (max-width: 767px) {
-    .innerbar {
-        display: block;
-    }
+  .innerbar {
+    display: block;
+  }
 
-    .nav-item {
-        display: block;
-        padding: .5rem 0;
-        text-align: right;
+  .nav-item {
+    display: block;
+    padding: 0.5rem 0;
+    text-align: right;
 
-        a {
-            padding: 0 !important;
-            
-        }
+    a {
+      padding: 0 !important;
     }
-    .navbar-toggler {
-        display: inline-block;
-        position: absolute;
-        right: 30px;
-        padding: 0.25rem 0;
-        line-height: 1;
-        // color: rgba(255,255,255,.5);
-        
-        background-color: transparent;
-        border: transparent;
+  }
+  .navbar-toggler {
+    display: inline-block;
+    position: absolute;
+    right: 30px;
+    padding: 0.25rem 0;
+    line-height: 1;
+    // color: rgba(255,255,255,.5);
 
-        &:hover {
-            text-decoration: none;
-            filter: brightness(110%);
-        }
+    background-color: transparent;
+    border: transparent;
+
+    &:hover {
+      text-decoration: none;
+      filter: brightness(110%);
     }
-    
-    .toggler-icon {
-        height: 2em;
-        width: 2em;
-        color: $brand-blue;
-    }
+  }
+
+  .toggler-icon {
+    height: 2em;
+    width: 2em;
+    color: $brand-blue;
+  }
 }
